<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ShowCore</string>
    <string name="preference_file_key">com.iflytek.cyber.iot.show.core.AppSharedPreferences</string>
    <string name="preference_client_id">Client ID Key</string>
    <string name="preference_client_secret">Client Secret Key</string>
    <string name="preference_product_id">Product ID Key</string>
    <string name="preference_product_dsn">Product DSN Key</string>
    <string name="preference_refresh_token">Refresh Token Key</string>
    <string name="preference_login_method">Login Method Key</string>
    <string name="dialog_title_permission">申请权限</string>
    <string name="dialog_permission_failed">申请 %s 权限失败</string>
    <string name="permission_record_audio">录音</string>
    <string name="retry">重试</string>
    <string name="close">关闭</string>
    <string name="settings">设置</string>
    <string name="music">音乐</string>
    <string name="tips_simple">蓝小飞</string>
    <string name="tips_sentence_simple">蓝小飞，明天出门要带伞吗？</string>
    <string name="about">关于</string>
    <string name="default_music_title">唤醒小飞，轻松听歌</string>
    <string name="next_step">下一步</string>
    <string name="connect">连接</string>
    <string name="connect_wifi">连接 Wi-Fi</string>
    <string name="bind_iflyos_account">绑定讯飞OS账号</string>
    <string name="pairing_tips">请在手机上打开 小飞在线 APP，扫码添加设备</string>
    <string name="binding_failed">绑定失败</string>
    <string name="about_iflyos">关于iFLYOS</string>
    <string name="system_version">系统版本</string>
    <string name="change_binding">更换绑定</string>
    <string name="xiaofei_online">小飞在线</string>
    <string name="change">更换</string>
    <string name="recognize_profile">识别引擎</string>
    <string name="message_near_field">近场（0~3米）</string>
    <string name="title_close_talk">近场</string>
    <string name="summary_close_talk">0~3米</string>
    <string name="title_far_field">远场</string>
    <string name="summary_far_field">0~10米</string>
    <string name="message_far_field">远场（0~10米）</string>
    <string name="network_error">网络出错，请检查网络</string>
    <string name="authorize_error">登录过期，请重新绑定设备</string>
    <string name="timeout_error">请求超时，请在稳定网络连接下重试</string>
    <string name="unknown_error">出现错误，请稍后再试</string>
    <string name="unsupported_device_error">不支持的设备</string>
    <string name="wifi_password">Wi-Fi 密码</string>
    <string name="mobile_data">移动数据</string>
    <string name="offline">离线</string>
    <string name="retry_connecting">正在尝试重连</string>
    <string name="recording_is_occupied">录音被占用</string>
    <string name="recording_is_occupied_message">请确定后台程序中无占用录音的应用。</string>
    <string name="check_update">检查更新</string>
    <string name="count_of_percent">%d%%</string>
    <string name="ignore_this_network">忽略此网络</string>
    <string name="cancel">取消</string>
    <string name="wlan">无线网络</string>
    <string name="screen_and_brightness">屏幕与亮度</string>
    <string name="screen_brightness">屏幕亮度</string>
    <string name="auto_lock">自动息屏</string>
    <string name="auto_lock_summary">若一段时间不通过语音或触控与设备交互，设备自动进入息屏状态</string>
    <string name="auto_lock_interval">息屏间隔</string>
    <string name="applicable_time">适用时段</string>
    <string name="my_account">我的账号</string>
    <string name="qr_code_client_network_error_message">获取二维码失败，请检查网络后重试</string>
    <string name="qr_code_client_error_message">网络异常，请检查网络后重试</string>
    <string name="qr_code_server_error_message">获取二维码失败，请重试</string>
    <string name="qr_code_server_timeout_message">请求授权超时，请刷新后重试</string>
    <string name="qr_code_expired_error_message">二维码已失效，请刷新后重试</string>
    <string name="volume">音量</string>
    <string name="music_volume">媒体音量</string>
    <string name="alarm_volume">闹钟音量</string>
    <string name="voice_wakeup">语音唤醒</string>
    <string name="panel_smart_home">智能家居</string>
    <string name="home_page">首页</string>
    <string name="message_board">留言板</string>
    <string name="voice_settings">语音设置</string>
    <string-array name="default_tips">
        <item>蓝小飞，明天天气怎么样？</item>
        <item>蓝小飞，爸爸的爸爸叫什么？</item>
        <item>蓝小飞，长歌行怎么背</item>
        <item>蓝小飞，明天早上8点叫我起床</item>
        <item>蓝小飞，倒计时1分钟</item>
        <item>蓝小飞，100美元可以换成多少人民币？</item>
        <item>蓝小飞，1公里等于多少厘米？</item>
        <item>蓝小飞，马到成功是什么意思？</item>
        <item>蓝小飞，打开客厅的灯</item>
    </string-array>
    <string-array name="player_tips">
        <item>蓝小飞，播放轻音乐</item>
        <item>蓝小飞，打开白噪音</item>
        <item>蓝小飞，我要听陈奕迅的阴天快乐</item>
        <item>蓝小飞，来点开心的歌</item>
        <item>蓝小飞，我要听火影忍者的主题曲</item>
    </string-array>
    <string-array name="alert_tips">
        <item>暂停</item>
        <item>停止闹钟</item>
        <item>关闭闹钟</item>
    </string-array>
    <string-array name="weather_tips">
        <item>蓝小飞，明天呢？</item>
        <item>蓝小飞，广州呢？</item>
    </string-array>
    <string-array name="option_tips">
        <item>蓝小飞，选择第一个</item>
        <item>蓝小飞，第五个</item>
        <item>蓝小飞，最后一个</item>
    </string-array>
    <string-array name="simple_guide_descriptions">
        <item>你可以说：“蓝小飞，番茄炒蛋怎么做”</item>
        <item>你可以说：“蓝小飞，今天天气怎么样”</item>
        <item>你可以说：“蓝小飞，我要玩成语接龙”</item>
    </string-array>
    <string name="lrc_label">暂无歌词</string>
    <string name="quit">退出</string>
    <string name="accessibility_desc">开启右上角开关，讯飞魔镜将具备息屏功能，当用户与讯飞魔镜一定时间无交互时，讯飞魔镜将进入息屏模式。</string>
    <string name="sleep_tips" formatted="true">若&#160;%s后&#160;不通过语音或触控与设备交互，设备自动进入息屏状态</string>
    <string name="sleep_enable_tips">自动息屏（息屏设置暂时无法使用，请前往系统设置【无障碍】设置中开启“讯飞魔镜”服务）</string>
    <string name="sleep_enable_desc">若要使用息屏设置功能 请先前往系统设置的【无障碍】开启【讯飞魔镜】服务</string>
    <string name="go_to_setting">去设置</string>
    <string name="close_alarm">关闭闹钟</string>
    <string name="alarm_title">闹钟</string>
    <string name="set_alarm_tips">你可以说：“帮我设置工作日早上八点半的闹钟”</string>
    <string name="add_new_alarm">添加闹钟</string>
    <string name="empty_alarm_tips">尚未设置闹钟</string>
    <string name="edit_alarm">编辑闹钟</string>
    <string name="ok">确定</string>
    <string name="alarm_desc">提醒内容</string>
    <string name="repeat">重复</string>
    <string name="setting_alarm_hint">请输入提醒内容</string>
    <string name="set_alarm_tips_1">你可以说：“蓝小飞，关闭闹钟”</string>
    <string name="more">更多</string>
    <string name="play_all">播放全部</string>
    <string name="no_more_result">已经到底了</string>
    <string name="i_got_it">我知道了</string>
    <string name="message_evs_disconnected">出错啦，正在重新连接，请稍后…</string>
    <string name="message_evs_auth_expired">登录过期，请在 App 中重新绑定。</string>
    <string name="message_evs_timeout">请求超时，请稍后重试。</string>
    <string name="re_auth">重新授权</string>
    <string name="select_time_title">适用时段</string>
    <string name="version_value">v%s</string>
    <string name="new_version_title">发现新版本 v%s</string>
    <string name="install_now">现在安装</string>
    <string name="update_now">立即升级</string>
    <string name="downloading_software">正在下载安装包…</string>
    <string name="download_completed">下载完成</string>
    <string name="update_failed_common">哎呀，检查更新失败了</string>
    <string name="refresh">刷新</string>
    <string name="previous_step">上一步</string>
    <string name="setup_network">设置网络</string>
    <string name="voice_button">辅助触控唤醒</string>
    <string name="welcome_using">欢迎使用</string>
    <string name="speaker_name">发音人</string>
    <string name="continous_interaction">连续对话</string>
    <string name="background_recognize">背景录音</string>
    <string name="background_recognize_message">开启连续对话，唤醒设备后可持续与设备进行对话。在设备播报完毕后，麦克风将自动开始录音，无需再次唤醒设备。\n背景录音则是在持续对话的基础上做了进阶处理，设备将保持麦克风开启录音的状态，用户可在设备播报的过程中，打断设备播报，与设备进行对话。</string>
    <string name="language">语言</string>
    <string name="human_property">人设</string>
    <string name="voice_property">音色</string>
    <string name="language_and_speaker">语言与音色</string>
    <string name="request_params_error">请求参数错误</string>
    <string name="message_recognize_profile">根据需求选择不同的识别引擎，会提高对应领域内识别的准确率</string>
    <string name="save">保存</string>
    <string name="server_error_message">服务端出错，请稍后重试</string>
    <string name="developer_options">开发者选项</string>
    <string name="show_dev_on">您现在处于开发者模式！</string>
    <plurals name="show_dev_coutdown">
        <item quantity="other">现在只需再执行 <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> 步操作即可进入开发者模式。</item>
        <item quantity="one">现在只需再执行 <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> 步操作即可进入开发者模式。</item>
    </plurals>
    <string name="show_dev_already">您已处于开发者模式，无需进行此操作。</string>
    <string name="use_custom_wake_res">更换自定义唤醒词</string>
    <string name="change_config">更换配置</string>
    <string name="turn_on_wifi_adb">打开 WiFi adb</string>
    <string name="turn_off_wifi_adb">关闭 WiFi adb</string>
    <string name="factory_reset">恢复出厂设置</string>
    <string name="close_developer_options">关闭开发者选项</string>
    <string name="edit_client_id">编辑 client id</string>
    <string name="scan_qrcode">扫描二维码</string>
    <string name="user_guide">使用指南</string>
    <string name="reboot_device">重启设备</string>
    <string name="wifi_adb_reboot_message">开启/关闭 WiFi adb 功能需要重启设备才能生效，确认重启设备吗？</string>
    <string name="ensure">确定</string>
    <string name="ota_toggle_summary">如果开启，当有新固件时，您的设备将收到更新提示。\n如果关闭或更改client id，您的设备后续将不会收到更新提示。</string>
    <string name="ota_firmware_update">OTA 固件更新</string>
    <string name="device_id">device id</string>
    <string name="client_id">client id</string>
    <string name="edit_client_id_guide"><![CDATA[对于需要修改 client id 的用户，我们提供了三种方式供您选择。除了文本框直接编辑 client id 外，还可以通过 adb 方式与扫码的方式：<br/><br/>通过 adb 更换 client id：<br/>1.打开【开发者选项】中的【WiFi adb】；<br/>2.进入 client id 编辑页面；<br/>3.通过 adb 连接设备后，执行下方指令，将 client id 粘贴到输入框中，完成替换。<br/><span style="background-color:#454754"><font color="#FFFFFF" face="monospace">&nbsp;adb shell input text {您要替换的 client id}&nbsp;</font></span><br/><br/>扫码更换 client id：<br/>1.在 iFLYOS 设备接入控制台，选择您想要更换的 client id 对应的产品；<br/>2.在【产品信息】找到 client id，并点击【显示二维码】；<br/>3.点击输入框右侧的扫描按钮，扫描 client id 二维码。完成替换。]]></string>
    <string name="edit_client_id_guide_title">对于需要修改 client id 的用户，我们提供了三种方式供您选择。除了文本框直接编辑 client id 外，还可以通过 adb 方式与扫码的方式：</string>
    <string name="edit_client_id_guide_1">通过 adb 更换 client id：\n1.打开【开发者选项】中的【WiFi adb】；\n2.进入 client id 编辑页面；\n3.通过 adb 连接设备后，执行下方指令，将 client id 粘贴到输入框中，完成替换。</string>
    <string name="edit_client_id_guide_2">扫码更换client id：\n1.在 iFLYOS 设备接入控制台，选择您想要更换的 client id 对应的产品；\n2.在【产品信息】找到 client id，并点击【显示二维码】；\n3.点击输入框右侧的扫描按钮，扫描 client id 二维码。完成替换。</string>
    <string name="scan_qrcode_tips">请将摄像头对准 iFLYOS 平台产品的 client id 二维码</string>
    <string name="wrong_qrcode">二维码错误</string>
    <string name="wrong_qrcode_message">请进入 iFLYOS 设备接入控制台的产品信息页面，点击 client_id 的显示二维码后重新扫描。</string>
    <string name="change_client_id_title">确定更换 client id</string>
    <string name="change_client_id_message">更换 client id 后，设备需要重新进行授权绑定，确定执行此操作吗？</string>
    <string name="wrong_client_id">错误的 client id</string>
    <string name="wrong_client_id_message">请输入正确的 client id</string>
    <string name="ota_firmware_update_disabled">固件更新功能已关闭</string>
    <string name="choose_wake_up_res">选择唤醒词文件</string>
    <string name="wake_up_res_guide_step_1"><![CDATA[在 iFLYOS 企业平台（ https://www.iflyos.cn/custom-awake-words ）生成浅定制唤醒词包，下载后将压缩包解压，将解压的文件命名为 <b>wake_up.bin</b>；]]></string>
    <string name="wake_up_res_guide_step_2"><![CDATA[通过 <span style="background-color:#E8EBEE;"><font color="#56A1C9">&nbsp;adb&nbsp;</font></span> 连接到设备后，将 wake_up.bin 通过 adb push 到 /sdcard 目录；]]></string>
    <string name="wake_up_res_guide_step_3"><![CDATA[点击<b>选择唤醒词文件</b>，找到刚刚 push 至 sdcard 的唤醒词包文件并点击替换，替换后重启设备，自定义唤醒词将生效。]]></string>
    <string name="internal_storage">内置存储</string>
    <string name="choose_the_file">选择此文件</string>
    <string name="connect_succeed">连接成功</string>
    <string name="connecting_voice_service_please_wait">正在连接智能语音服务，请稍候</string>
    <string name="multi_select">多选</string>
    <string name="select_all">全选</string>
    <string name="empty_latest_history">暂无播放记录</string>
    <string name="delete">删除</string>
</resources>