<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/Body14.Grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_4"
        android:text="识别引擎" />

    <FrameLayout
        android:id="@+id/close_talk"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_40"
        android:paddingEnd="@dimen/dp_40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                style="@style/H4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_close_talk" />

            <TextView
                style="@style/Body16.Grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_close_talk" />
        </LinearLayout>

        <com.iflytek.cyber.iot.show.core.widget.CircleCheckBox
            android:id="@+id/close_talk_checkbox"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center_vertical|end"
            app:lottie_rawRes="@raw/animation_checkbox_turn_on" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_gravity="bottom"
            android:alpha="0.1"
            android:background="@android:color/black" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/far_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_40"
        android:paddingEnd="@dimen/dp_40">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                style="@style/H4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_far_field" />

            <TextView
                style="@style/Body16.Grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_far_field" />
        </LinearLayout>

        <com.iflytek.cyber.iot.show.core.widget.CircleCheckBox
            android:id="@+id/far_field_checkbox"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center_vertical|end"
            app:lottie_rawRes="@raw/animation_checkbox_turn_on" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_gravity="bottom"
            android:alpha="0.1"
            android:background="@android:color/black" />

    </FrameLayout>

</LinearLayout>