<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alarm_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_alarm"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/dp_98"
                android:layout_height="@dimen/dp_36"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="@dimen/dp_40"
                android:layout_marginBottom="@dimen/dp_30"
                android:text="@string/add_new_alarm"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_14"
                app:bl_corners_radius="@dimen/dp_24"
                app:bl_ripple_color="#1A000000"
                app:bl_ripple_enable="true"
                app:bl_unPressed_drawable="@color/setup_primary" />

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_20"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_page_back_black_24dp"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_toEndOf="@id/iv_back"
                android:text="@string/alarm_title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_set_alarm_tips"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_40"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginEnd="@dimen/dp_40"
                    android:text="@string/set_alarm_tips"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_20" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/alarm_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_24"
                    android:clipToPadding="false"
                    android:paddingStart="@dimen/dp_40"
                    android:overScrollMode="never"
                    android:paddingEnd="@dimen/dp_40"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_empty_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/empty_alarm_tips"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_22"
        android:visibility="gone" />

</FrameLayout>